# stepgen

./: Cargo.toml  README.md  README.tpl
.circleci/: config.yml
.github/workflows/: verify.yml
src/: lib.rs
tests/: stepgen.rs  test_data.rs
tests/data/: 10  100  1000  1001  101  1_1_1  2  2000_1_900  3  32000_16_14400  4  5  6  7  8  9
