[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Stepper motor speed ramp generator"
repository = "https://github.com/idubrov/stepgen"
name = "stepgen"
version = "0.1.2-pre"
license = "MIT OR Apache-2.0"

[package.metadata.release]
pre-release-hook = "./update-readme.sh"

exclude = [
    "docs/*"
]

[dev-dependencies.pretty_assertions]
version = "0.3.4"

[dev-dependencies]
regex = "0.2"
