[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Stepper motor speed ramp generator"
repository = "https://github.com/idubrov/stepgen"
name = "stepgen"
version = "0.1.3-alpha.0"
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = [
    "docs/*"
]

[package.metadata.release]
pre-release-hook = "./update-readme.sh"
